@@ -10,6 +10,7 @@ Bugfixes
 - dnstap module: fix repeated configuration (!1168)
 - validator: fix SERVFAIL for some rare dynamic proofs (!1166)
 - fix SIGBUS on uncommon ARM machines (unaligned access; !1167, #426)
+- cache: better resilience on abnormal termination/restarts (!1172)
 
 
 Knot Resolver 5.3.1 (2021-03-31)
